# MAPS

./: .gitignore  LICENSE  README.md  conda-lock.yml  environment.yaml  pyproject.toml  requirements.txt
src/MAPS/MitoTracker/data/: BasicDataset.py  __init__.py
src/MAPS/MitoTracker/models/: BasicUNets.py  DoubleModel.py  PredictionModel.py  __init__.py  build_model.py
src/MAPS/MitoTracker/predict/: majorityVote.py  make_predictions.py  postprocess.py
src/MAPS/MitoTracker/utils/: Args.py  Losses.py  Metrics.py  Tracker.py  __init__.py  build_optimizer.py  common_utils.py  predict.py
src/MAPS/NoisyImmunolabeling/: __init__.py  prediction_finetuned.py  prediction_outline.py  train_finetune_inner.py  train_initial_inner.py  train_outline.py
src/MAPS/NoisyImmunolabeling/data/: Data3D.py  FineTuneDataset.py  FullDataset.py  GenerateSegData.ipynb  InitialAdoptDataset.py  __init__.py  utils.py
src/MAPS/NoisyImmunolabeling/models/: BaseModel3D.py  DiceLoss.py  FineTuneModel.py  __init__.py  predict.py
src/MAPS/NoisyImmunolabeling/postprocessing/: postprocess.py
src/MAPS/utils/: UNetFactory.py  __init__.py
