# Packaging configuration
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MAPS"
version = "0.1.0"
description = "A Python package for MitoTracker and Immunolabeling analysis"
authors = [
    {name = "Alexander Sauer", email = "sauer.alexander@gmx.com"}
]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "tifffile",
    "einops",
    "numba>=0.59",
    "scikit-image>=0.22",
    "matplotlib",
    "tqdm",
    "torch>=2.0",
    "torchvision",
    "torchaudio",
    "pytorch-lightning>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# Existing Ruff configuration
[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.black]
line-length = 120
target-version = ["py312"]  # Match Python 3.12 in environment.yaml
skip-string-normalization = false
